# todo-bot

./: .dockerignore  .example.env  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  todo-bot-1.code-workspace
migrations/2023-04-06-064205_c_users/: up.sql
migrations/2023-04-08-113146_c_todos/: up.sql
src/: main.rs  schema.rs
src/bot/: formatters.rs  main_menu.rs  mod.rs  onboarding.rs  todo_creation.rs  utlities.rs
src/models/: mod.rs  todos.rs  users.rs
