[package]
name = "todo-bot-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
dotenvy = "0.15.7"
chrono = "0.4.24"

[dependencies.diesel]
version = "2.0.3"
features = ["postgres", "chrono"]

[dev-dependencies]
random_name_generator = "0.3.4"
rstest = "0.17.0"
rand = "0.8.5"
